# Mammoth

./: .gitignore  .gitmodules  .rosinstall  CMakeLists.txt  README.md  deps.repos  mammoth.repos  mammoth.rosinstall  ros2-mammoth.code-workspace  yeti.rosinstall
control_publisher/: CMakeLists.txt  (+1 more)
mammoth_description/: CMakeLists.txt  package.xml
mammoth_description/models/brick_plane/meshes/: BlenderBrickRoad.dae
mammoth_description/models/pylon_orange/: model.sdf
mammoth_description/models/pylon_orange/meshes/: OrangePylon.dae
mammoth_description/models/yeti_with_plow/: model.config  model.sdf
mammoth_description/models/yeti_with_plow/meshes/: 45degplow.dae  plow.dae
mammoth_description/rviz/: mammoth_gazebo.rviz
mammoth_description/urdf/: .mammoth.urdf.swp  mammoth.urdf  mammoth1.urdf  yeti.urdf  yeti_sim.urdf
mammoth_gazebo/: CMakeLists.txt  LICENSE  README.md  package.xml
mammoth_gazebo/config/: ekf.yaml  mapper_params_lifelong.yaml  mapper_params_online_async.yaml  nav2_params.yaml  slam_online_async.yaml  xbox.config.yaml
mammoth_gazebo/config/joystick/: switch-pro.config.yaml  xbone.config.yaml
mammoth_gazebo/config/maps/amcl/: single-I.pgm  single-I.yaml
mammoth_gazebo/config/navigation/: nav2_params.yaml
mammoth_gazebo/config/slam/: mapper_params_online_async.yaml
mammoth_gazebo/config/waypoints/: single-I.csv  test.csv
mammoth_gazebo/install/: local_setup.sh  setup.sh
mammoth_gazebo/launch/: base.launch.py  mammoth.launch.py
mammoth_gazebo/launch/include/: navigation.launch.py  pcpl.launch.py  state_publishers.launch.py  waypoint.launch.py
mammoth_gazebo/launch/include/Slam_tool_box/: nav.launch.py
mammoth_gazebo/launch/include/gazebo/: gazebo.launch.py
mammoth_gazebo/launch/include/lidar_processor/: lidar_processor.launch.py
mammoth_gazebo/launch/test/: joystick_teleop.launch.py
mammoth_gazebo/log/: latest_build
mammoth_gazebo/rviz/: mammoth_gazebo.rviz
mammoth_gazebo/scripts/: README.md  install_gazebo_models.sh  install_models.sh
mammoth_gazebo/worlds/: README.md  edifice(1).sdf  ign-tracked_vehicle_wheeled.sdf  single-I.sdf  single-I_nosnow.sdf  single_I.sdf  test.sdf
mammoth_simulation/: CMakeLists.txt  README.md  package.xml
mammoth_simulation/launch/: simulation_start_mammoth.launch  spawn_sdf.launch  triple-I_no_snow.launch  triple-I_snow.launch
mammoth_simulation/launch/include/: transforms_simulation.launch  waypoint_publisher_simulation.launch
mammoth_simulation/models/brick_plane/: model.sdf
mammoth_simulation/models/pylon_orange/: model.config
mammoth_simulation/models/pylon_yellow/: model.config  model.sdf
mammoth_simulation/models/single-I/: model.config
mammoth_simulation/models/triple-I/: model.config  model.sdf
mammoth_simulation/models/yeti/: model.config  model.sdf  model.urdf
mammoth_simulation/models/yeti_with_spinners/: model.config
mammoth_simulation/worlds/: IONMinessotaSimField.sdf  single-I_nosnow (origin).sdf  single-I_nosnow_(original).sdf  single-I_snow (origin).sdf  single-I_with_snow.sdf  triple-I_no_snow.sdf  triple-I_snow.sdf
mammoth_snowplow/: CMakeLists.txt  LICENSE  README.md  package.xml
mammoth_snowplow/config/: I_Map.pgm  I_Map.yaml  costmap_common.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.old.yaml  planner.yaml  test.csv
mammoth_snowplow/config/navigation/: nav2_params.yaml
mammoth_snowplow/config/roboteq/: roboteq.yaml
mammoth_snowplow/config/slam/: mapper_params_online_async.yaml
mammoth_snowplow/config/waypoints/: .single-I.csv.swp  double-I.csv  highbay.csv  single-I (another copy).csv  single-I (copy).csv  single-I.csv
mammoth_snowplow/launch/: drive_mammoth.launch  mammoth.launch.py  record_bag.launch  start_gmapping.launch  start_mammoth.launch  start_mammoth_record (copy).launch  start_mammoth_record.launch  start_mammoth_sim.launch  start_move_base.launch  start_waypoint_publisher.launch  starthdc_mammoth.launch  startmdc_mammoth.launch  static_transforms.launch  waypoint_publisher.launch
mammoth_snowplow/launch/include/: gmapping.launch  navigation.launch.py  pcpl.launch.py  waypoint.launch.py
mammoth_snowplow/launch/simulation/: gmapping_simulation.launch  simulation_start_mammoth.launch  start_mammoth_simulation.launch  start_waypoint_publisher_simulation.launch  transforms_simulation.launch  waypoint_publisher_simulation.launch
mammoth_snowplow/launch/test/: joystick_teleop.launch.py
mammoth_snowplow/src/: auditory_feedback.py  mammoth_snowplow.cpp  mammoth_waypoint_publisher.py  map_laser_scan.cpp  memes.py  redirect.cpp  transform_publisher.cpp  waypoint_class.cpp
yeti_snowplow/: CMakeLists.txt  package.xml
yeti_snowplow/data/: landmark_locations_Qualification.txt  landmark_locations_Single_I.txt  landmark_locations_Triple_I.txt  navigationDay1.txt  navigationDay2.txt  test1.txt
yeti_snowplow/launch/: gpio_monitor_test.launch  lidarVOSLAM_test.launch  localization_test.launch  namespace_test.launch  navigation_pid_test.launch  record_path.launch  rviz.launch  sim.rviz  simulation.launch  start_pid_test_simulation.launch  start_simulation.launch  start_yeti.launch  viso2test.launch  vo.launch  waypoint_test.launch  zed.launch
yeti_snowplow/models/brick_plane/: model.config
yeti_snowplow/models/single-I/: model.sdf
yeti_snowplow/models/yeti/: model.sdf  model.urdf  test.urdf
yeti_snowplow/models/yeti_with_spinners/: model.sdf
yeti_snowplow/msg/: gpio_inputs.msg  gpio_leds.msg  lidar_point.msg  location_point.msg  obstacle.msg  obstacles.msg  target.msg  turn.msg
yeti_snowplow/src/: auto_control_logic.cpp  buffer.h  gpio_monitor.cpp  localization_node.cpp  navigation_pid.cpp  navigation_pid_speed.cpp  navigation_pid_test.cpp  navigation_pid_turn.cpp  navigation_pid_velocity.cpp  obstacle_detection.cpp  obstacle_reaction.cpp  stall_detection_node.cpp  yeti_drive_mode_control.cpp  yeti_waypoint_selection.cpp
yeti_snowplow/srv/: pid_test_world.sdf  single-I.sdf  single-I_nosnow (origin).sdf  single-I_nosnow.sdf  snowWorldGen.py  snowWorldGenCube.py  waypoint.srv
(+68 files in other folders)
